added sorting by date